--- a/way-to-java-eureka-client/src/main/resources/application.yaml
+++ b/way-to-java-eureka-client/src/main/resources/application.yaml
@@ -9,3 +9,11 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+  #开启健康检查（需要spring-boot-starter-actuator依赖）
+  healthcheck:
+    enabled: true
+  #租期更新时间间隔（默认30秒）
+  instance:
+    lease-renewal-interval-in-seconds: 10
+    #租期到期时间（默认90秒）
+    lease-expiration-duration-in-seconds: 15
